add hero section.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <body>
 
     <!-- Header Section -->
-    <section id="header">
-        <div class="container-lg">
+    <section id="header" class="fixed-top">
+        <div class="container-fluid">
 
             <div class="header-main d-flex justify-content-between align-items-center">
                 
@@ -41,7 +41,7 @@
                         " href="">HARISH</a></h1>
                 </div>
 
-                <div class="header-links-nav d-flex align-items-center">
+                <div class="header-links-nav d-flex justify-content-between align-items-center">
                     <div class="header-links order-lg-2">
                         <ul class="list-unstyled m-0 d-flex">
                             <li><a class="text-decoration-none d-inline-block" href=""><i class="icofont-twitter"></i></a></li>
@@ -71,6 +71,26 @@
                         </div>
                 </div>
 
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Hero Section -->
+    <section id="hero">
+        <div class="white-overlay d-flex justify-content-center align-items-center">
+            <div class="container-fluid">
+                <div class="hero-bucket">
+                    <div class="hero-title text-center">
+                        <h1>Harishkumar</h1>
+                    </div>
+                    <div class="hero-content text-center">
+                        <h2>I'm a professional Front-end Developer from Chennai</h2> 
+                    </div>
+                    <div class="hero-btn">
+                        <button><a class="d-inline-block text-decoration-none" href="">ABOUT ME</a></button>
+                    </div>
                 </div>
             </div>
         </div>
