add legals section.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <!-- Header Section -->
     <section id="header" class="fixed-top">
-        <div class="container-fluid">
+        <div class="container">
 
             <div class="header-main d-flex justify-content-between align-items-center">
                 
@@ -92,6 +92,21 @@
                         <button><a class="d-inline-block text-decoration-none" href="">ABOUT ME</a></button>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Legals Section -->
+    <section id="legals">
+        <div class="container">
+
+            <div class="legals-cnt text-center">
+                <p class="m-0"><i class="icofont-copyright"></i> Copyright <b>Harish</b>. All Rights Reserved</p>
+            </div>
+
+            <div class="legals-btmcnt text-center">
+                <p class="pt-1 m-0">Designed by <a class="text-decoration-none" href="">BootstrapMade</a></p>
             </div>
         </div>
     </section>
