--- a/index.html
+++ b/index.html
@@ -39,12 +39,36 @@
             <p>Hello, my name is</p>
             <h1>Harishkumar</h1>
             <p class="mydetails">And I'm a <span class="typing"></span> </p>
-            <a href="#">Hire me</a>
+            <a href="javascript:void(0)" class="filled-button">Hire me</a>
         </div>
     </section>
     <!-- End Hero Section -->
 
-
+    <!-- About Section -->
+    <section class="about">
+        <div class="container">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <div class="about-content-left">
+                            <img src="./images/myimage.jpg" alt="Harishkumar" title="Harishkumar">
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="about-content-right">
+                            <div class="text">
+                                I'm Harish and I'm a <span class="typing-2"></span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                            <a href="javascript:void(0)" class="filled-button">Download CV</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End About Section -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
