--- a/index.html
+++ b/index.html
@@ -70,6 +70,48 @@
     </section>
     <!-- End About Section -->
 
+    <!-- Services Section -->
+    <section class="services">
+        <div class="container">
+            <h2 class="title">My Services</h2>
+            <div class="services-content">
+                <div class="row">
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="services-card">
+                            <div class="services-card-body">
+                                <img src="./images/paint-brush.png" alt="Web Design" title="Web Design" class="non-hover">
+                                <img src="./images/white-paint-brush.png" alt="Web Design" title="Web Design" class="on-hover">
+                                <h2>Web Design</h2>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi, dolores non? Soluta eaque dicta libero ut aliquid quaerat. Eius</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="services-card">
+                            <div class="services-card-body">
+                                <img src="./images/line-chart.png" alt="Advertising" title="Advertising" class="non-hover">
+                                <img src="./images/white-line-chart.png" alt="Advertising" title="Advertising" class="on-hover">
+                                <h2>Advertising</h2>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi, dolores non? Soluta eaque dicta libero ut aliquid quaerat. Eius</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-lg-4">
+                        <div class="services-card">
+                            <div class="services-card-body">
+                                <img src="./images/programming-code-signs.png" alt="Apps Design" title="Apps Design" class="non-hover">
+                                <img src="./images/white-programming-code-signs.png" alt="Apps Design" title="Apps Design" class="on-hover">
+                                <h2>Apps Design</h2>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi, dolores non? Soluta eaque dicta libero ut aliquid quaerat. Eius</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Services Section -->
+
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
