--- a/index.html
+++ b/index.html
@@ -112,6 +112,57 @@
     </section>
     <!-- End Services Section -->
 
+    <!-- Skills Section Starts -->
+    <section class="skills">
+        <div class="container">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <div class="skills-content-left">
+                            <h3>My creative skills & experiences.</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, ratione error est recusandae consequatur, iusto illum deleniti quidem impedit, quos quaerat quis minima sequi. Cupiditate recusandae laudantium esse, harum animi aspernatur quisquam et delectus ipsum quam alias quaerat? Quasi hic quidem illum. Ad delectus natus aut hic explicabo minus quod.<p>
+                            <a href="javascript:void(0)" class="filled-button">Read more</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="skills-content-right">
+                            <div class="bars">
+                                <div class="skills-info">
+                                    <span>HTML</span>
+                                    <span>90%</span>
+                                </div>
+                                <div class="skills-line html"></div>
+                            </div>
+                            <div class="bars">
+                                <div class="skills-info">
+                                    <span>CSS</span>
+                                    <span>90%</span>
+                                </div>
+                                <div class="skills-line css"></div>
+                            </div>
+                            <div class="bars">
+                                <div class="skills-info">
+                                    <span>JavaScript</span>
+                                    <span>70%</span>
+                                </div>
+                                <div class="skills-line js"></div>
+                            </div>
+                            <div class="bars">
+                                <div class="skills-info">
+                                    <span>Bootstrap</span>
+                                    <span>80%</span>
+                                </div>
+                                <div class="skills-line bootstrap"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Skills Section Ends -->
+
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
