add contact and footer section.

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                     <a href="#">Portfo<span>lio.</span></a>
                 </div>
                 <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Teams</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#index">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#teams">Teams</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="menu-btn">
                     <img src="./images/menu.png" alt="">
@@ -47,7 +47,7 @@
     <!-- End Hero Section -->
 
     <!-- About Section -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <h2 class="title">About me</h2>
             <div class="about-content">
@@ -73,7 +73,7 @@
     <!-- End About Section -->
 
     <!-- Services Section -->
-    <section class="services">
+    <section class="services" id="services">
         <div class="container">
             <h2 class="title">My Services</h2>
             <div class="services-content">
@@ -115,7 +115,7 @@
     <!-- End Services Section -->
 
     <!-- Skills Section Starts -->
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="container">
             <h2 class="title">My skills</h2>
             <div class="skills-content">
@@ -166,7 +166,7 @@
     <!-- Skills Section Ends -->
 
     <!-- Teams Section Starts -->
-    <section class="teams">
+    <section class="teams" id="teams">
         <div class="container">
             <h2 class="title">My Teams</h2>
             <div class="teams-slider">
@@ -210,6 +210,80 @@
         </div>
     </section>
     <!-- Teams Section Ends -->
+
+    <!-- Contact Section Starts -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <h2 class="title">Contact me</h2>
+            <div class="row contact-inner-details">
+                <div class="col-sm-6 col-xs-12">
+                    <div class="contact-details">
+                        <h3>Get in Touch</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                        <div class="contact-wrapper">
+                            <div class="contact-icon">
+                                <img src="./images/user.png" alt="Name" title="Name">
+                            </div>
+                            <div class="contact-info">
+                                <h4>Name</h4>
+                                <p>Harishkumar</p>
+                            </div>
+                        </div>
+                        <div class="contact-wrapper">
+                            <div class="contact-icon">
+                                <img src="./images/pin.png" alt="Address" title="Address">
+                            </div>
+                            <div class="contact-info">
+                                <h4>Address</h4>
+                                <p>Pallikaranai, Chennai</p>
+                            </div>
+                        </div>
+                        <div class="contact-wrapper">
+                            <div class="contact-icon">
+                                <img src="./images/messages.png" alt="Email" title="Email">
+                            </div>
+                            <div class="contact-info">
+                                <h4>Email</h4>
+                                <p>hk1651999@gmail.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-xs-12">
+                    <div class="message-me">
+                        <h3>Message me</h3>
+                        <form class="row g-3">
+                            <div class="col-md-6">
+                              <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                            </div>
+                            <div class="col-md-6">
+                                <input type="email" class="form-control" placeholder="Email" id="inputEmail4">
+                            </div>
+                            <div class="col-12">
+                              <input type="text" class="form-control" placeholder="Subject">
+                            </div>
+                            <div class="col-12">
+                                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message.." rows="3"></textarea>
+                            </div>
+                            <div class="col-12">
+                              <button type="submit" href="javascript:void(0)" class="btn filled-button">Send message</button>
+                            </div>
+                          </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contact Section Ends -->
+
+    <!-- Footer Section Starts -->
+    <footer>
+        <div class="container">
+            <span>Created By <a href="javascript:void(0)">Harishkumar</a> | <img src="./images/copyright.png" alt="All rights reserved" title="All rights reserved">  2021 All rights reserved.</span>
+        </div>
+    </footer>
+    <!-- Footer Section Ends -->
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
