--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <a href="#">Portfo<span>lio.</span></a>
                 </div>
                 <ul class="menu">
+                    <li class="close-menu"><img src="/images/close.png" alt="Close" /></li>
                     <li><a href="#index">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
